[gd_scene load_steps=4 format=3 uid="uid://d3l4b7il2xwqv"]

[ext_resource type="FontFile" uid="uid://dxfyisbd2ylri" path="res://assets/Fonts/joystix monospace.otf" id="1_l5igl"]
[ext_resource type="Script" path="res://scenes/ui-scenes/title-screen/title_screen.gd" id="1_mh60y"]
[ext_resource type="Script" path="res://scenes/ui-scenes/title-screen/user_info.gd" id="3_v0kmf"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mh60y")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.158472, 0.158472, 0.158472, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -604.5
offset_top = -491.0
offset_right = 604.5
offset_bottom = -315.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_l5igl")
theme_override_font_sizes/font_size = 141
text = "THEOUS KAI"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 540
alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="StartBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_l5igl")
theme_override_font_sizes/font_size = 66
text = "START"

[node name="OptionBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_l5igl")
theme_override_font_sizes/font_size = 66
text = "Options"

[node name="ExitBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_l5igl")
theme_override_font_sizes/font_size = 66
text = "EXIt"

[node name="SwitchAcc" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -261.0
offset_top = -23.0
offset_right = -29.0
offset_bottom = 40.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_l5igl")
theme_override_font_sizes/font_size = 31
text = "Account"

[node name="UserInfo" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false
script = ExtResource("3_v0kmf")

[node name="ColorRect" type="ColorRect" parent="UserInfo"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -715.0
offset_top = -322.0
offset_right = 718.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 3.76)
color = Color(0.55562, 0.55562, 0.55562, 1)

[node name="Label" type="Label" parent="UserInfo"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -604.0
offset_top = -249.0
offset_right = 605.0
offset_bottom = -137.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_l5igl")
theme_override_font_sizes/font_size = 50
text = "Currently Logged in as:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoggedInUser" type="Label" parent="UserInfo"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -608.0
offset_top = -99.0
offset_right = 601.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_l5igl")
theme_override_font_sizes/font_size = 50
text = "---"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LogoutBtn" type="Button" parent="UserInfo"]
unique_name_in_owner = true
offset_left = 820.0
offset_top = 617.0
offset_right = 1099.0
offset_bottom = 690.0
theme_override_fonts/font = ExtResource("1_l5igl")
theme_override_font_sizes/font_size = 40
text = "Logout"

[node name="CloseUserInfoBtn" type="Button" parent="UserInfo"]
unique_name_in_owner = true
offset_left = 822.0
offset_top = 713.0
offset_right = 1101.0
offset_bottom = 786.0
theme_override_fonts/font = ExtResource("1_l5igl")
theme_override_font_sizes/font_size = 40
text = "Close"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/OptionBtn" to="." method="_on_option_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ExitBtn" to="." method="_on_exit_btn_pressed"]
[connection signal="pressed" from="SwitchAcc" to="." method="_on_switch_acc_pressed"]
[connection signal="pressed" from="UserInfo/LogoutBtn" to="UserInfo" method="_on_logout_btn_pressed"]
[connection signal="pressed" from="UserInfo/CloseUserInfoBtn" to="UserInfo" method="_on_close_user_info_btn_pressed"]
